Refactor TaskService: eliminar importaciones innecesarias y simplificar la conversión de listas a toList() para mejorar la legibilidad del código.